--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "Onkar@123",
-    "database": "DB_PROJECT",
-    "host": "127.0.0.1",
+    "username": "db_project_9skq_user",
+    "password": "bULXl4cBUqMt8mNmoPnVRCTipFZPlZv0",
+    "database": "db_project_9skq",
+    "host": "dpg-cu0vu5rqf0us73d4kvu0-a",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "Onkar@123",
-    "database": "DB_PROJECT",
-    "host": "127.0.0.1",
+    "password": "bULXl4cBUqMt8mNmoPnVRCTipFZPlZv0",
+    "database": "db_project_9skq",
+    "host": "dpg-cu0vu5rqf0us73d4kvu0-a",
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": "Onkar@123",
-    "database": "DB_PROJECT",
-    "host": "127.0.0.1",
+    "username": "db_project_9skq_user",
+    "password": "bULXl4cBUqMt8mNmoPnVRCTipFZPlZv0",
+    "database": "db_project_9skq",
+    "host": "dpg-cu0vu5rqf0us73d4kvu0-a",
     "dialect": "postgres"
   }
 }
